# rtl_433

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  .prettierrc.yml  AGENTS.md  CHANGELOG.md  COMPATIBILITY_CONTRACT.md  CONTRIBUTING.md  CORE_UPSTREAM.md  README.md  WEBSOCKET_API.md  hacs.json  mkdocs.yml  pyproject.toml  release-please-config.json  renovate.json  requirements.txt  requirements_dev.txt  requirements_test.txt  skills-lock.json
.ai/strikethroo/: .init-metadata.json
.ai/task-manager/: .init-metadata.json
.claude/agents/: plan-creator.md
.github/workflows/: codeql.yml  conventional-commits.yml  copilot-setup-steps.yml  docs.yml  lint.yml  mutation.yml  release.yml  test.yml  validate.yml
0.18/: 404.html  index.html  sitemap.xml
0.18/availability/: index.html
0.18/calibration/: index.html
0.18/configuration/: index.html
0.18/device-discovery/: index.html
0.18/device-library/: index.html
0.18/diagnostics/: index.html
0.18/event-based-devices/: index.html
0.18/hub-entities/: index.html
0.18/installation/: index.html
0.18/websocket-api/: index.html
0.19/: 404.html  index.html  sitemap.xml
0.19/availability/: index.html
0.19/calibration/: index.html
0.19/configuration/: index.html
0.19/device-discovery/: index.html
0.19/device-library/: index.html
0.19/diagnostics/: index.html
0.19/event-based-devices/: index.html
0.19/hub-entities/: index.html
0.19/installation/: index.html
0.19/websocket-api/: index.html
brands/: README.md  generate_brand_assets.py
custom_components/rtl_433/: __init__.py  binary_sensor.py  button.py  calibration.py  config_flow.py  const.py  device_trigger.py  diagnostics.py  entity.py  event.py  hub_settings.py  library.py  manifest.json  mapping.py  migration.py  normalizer.py  number.py  options_flow.py  repairs.py  sdr_settings.py  select.py  sensor.py  switch.py
dev/: 404.html  index.html  sitemap.xml
dev/availability/: index.html
dev/calibration/: index.html
dev/configuration/: index.html
docs/: availability.md  calibration.md  configuration.md  device-discovery.md  device-library.md  diagnostics.md  discovery.md  event-based-devices.md  hub-entities.md  index.md  installation.md  multiple-servers.md  precommit-uv-ci-repro.md  screenshots.md  websocket-api.md
scripts/: mutation_baseline.json  mutation_ratchet.py  mutation_shards.py  mutation_stats.py  mutation_targets.py  mutation_timings.json  mutation_timings.py
tests/: __init__.py  conftest.py  test_availability_class_defaults.py  test_binary_sensor_motion.py  test_config_flow.py  test_coordinator.py  test_device_trigger.py  test_diagnostics_repairs.py  test_event_trace.py  test_lifecycle.py  test_mapping.py  test_migration_roundtrip.py  test_mut_binary_sensor.py  test_mut_calibration_floor.py  test_mut_config_flow.py  test_mut_const.py  test_mut_coordinator_base.py  test_mut_coordinator_base_floor.py  test_mut_device_trigger.py  test_mut_diagnostics.py  test_mut_entity.py  test_mut_init.py  test_mut_library_floor.py  test_mut_mapping.py  test_mut_mapping_floor.py  test_mut_migration_floor.py  test_mut_number.py  test_mut_repairs_floor.py  test_mut_sdr_settings_floor.py  test_mut_sensor.py  test_mut_switch.py  test_mutation_shards.py  test_mutation_targets.py  test_normalizer.py  test_sdr_controls.py  test_sdr_settings_adapter.py
(+279 files in other folders)
